--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 gpytorch==1.11
-lightning>=2.3.1
+lightning==2.4.0
 matplotlib==3.8.3
 numpy==1.26.4
 optuna==3.5.0
 pandas==2.2.1
-scikit_learn>=1.5.0
+python-dotenv==1.0.1
+scikit_learn==1.5.0
 seaborn==0.13.2
 statsmodels==0.14.1
 torch==2.2.1+cu121
