Write data update script, configure with Hydra
Data update code & script works as intended.
Make sure Hydra log folder name is properly configured & ignored.
Use Makefile to run scripts with default configs.
Use commands manually to override configs with Hydra.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ data/deployment/predictions/*
 # Lightning logs
 /lightning_logs
 
+# Hydra logs
+/hydra_outputs
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
