--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,22 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "src"
 version = "0.0.1"
-dynamic = ["dependencies"]
+dependencies = [
+	"lightning==2.4.0",
+	"hydra-core==1.3.2",
+	"matplotlib==3.8.3",
+	"numpy==1.26.4",
+	"optuna==3.5.0",
+	"pandas==2.2.1",
+	"python-dotenv==1.0.1",
+	"scikit_learn==1.5.0",
+	"seaborn==0.13.2",
+	"torch==2.2.1+cu121"
+]
 
-[tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
+[project.optional-dependencies]
+analysis = [
+	"gpytorch==1.11",
+	"statsmodels==0.14.1",
+	"u8darts==0.27.2"
+]
