Containerize data update script with Docker
Make commands work, but container needs "CMD / command" or "ENTRYPOINT" to keep it running & execute scripts with "docker compose exec".

Bind mounts work, files in bind mounts cannot be ignored with .dockerignore.

src install & import works.

Path.cwd() yields container workdir. get_root_dir doesn't work in container.

Python-slim image may not include some libraries like `requests`, update dependencies in pyproject.toml.

--- a/.env-mock
+++ b/.env-mock
@@ -3,5 +3,6 @@
 # Rename the file to .env
 # Do not share .env file, commit .env file to version control, or expose credentials in your code
 
-epias_username = "email@email.com"
-epias_password = "XXXXXXXXXXXXXXX"
+
+epias_username='email@email.com'
+epias_password='XXXXXXXXXXXXXXX'
